--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
 
       // set tags for AutoComplete
       const tags = [];
-      for (let i = 0; i < 100000; i++) {
+      for (let i = 0; i < 1000; i++) {
         tags.push(
           { key: "john_doe", value: "John Doe" },
           { key: "jane_smith", value: "Jane Smith" },
@@ -155,7 +155,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           hide(false);
           
           if (r.body.length < 1 || r.body.length > 39) {
-            this.stop(true);
+            this.kill()
             return r;
           }
 
@@ -164,7 +164,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           const isBackspace = e.key.toLowerCase() === "backspace";
           const isLastChar = el.selectionStart === r.head.length + r.body.length;
           if (isBackspace && !isLastChar) {
-            this.stop(true);
+            this.kill();
             return r;
           }
 
@@ -173,30 +173,25 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           return r;
         }
 
-        ac.filter = function (chunk, result, i, candidates) {
+        ac.filter = function (query, tag, i, tags) {
           // console.log("filter", chunk);
-          const { tag, query } = chunk;
+          const result = this.result;
           const a = query.body;
           const b = tag.key;
 
           if (result.length >= MAX_ITEM_COUNT) {
-            this.stop(true);
+            this.stop();
             return false;
           }
 
-          // 100000 items, 5332ms
-          const { score } = ac.compare(a, b);
-          const ok = score >= a.length;
+          const { matches } = matchStrings(a, b);
 
-          // 100000 items, 4529ms
-          // const ok = b.indexOf(a) > -1;
-
-          return ok;
+          return matches >= a.length;
         }
 
         const load = () => {
-          if (items[index]?.chunk) {
-            ac.set(items[index].chunk);
+          if (items[index]?.tag) {
+            ac.set(items[index].tag);
           }
         }
 
@@ -248,7 +243,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           listEl.innerHTML = "";
           listEl.style.visibility = "hidden";
           if (kill) {
-            ac.stop(true);
+            ac.kill();
           }
         }
 
@@ -302,17 +297,22 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           }
         }
 
-        ac.onData = function (chunks, result) {
+        ac.onData = function (chunks) {
           if (chunks.length) {
-            console.log("onData", chunks, result);
+            console.log("onData", chunks);
+          }
+
+          const query = this.query;
+          
+          if (!query) {
+            hide();
           }
 
           // render items
           for (let i = 0; i < chunks.length; i++) {
             const idx = i;
-            const chunk = chunks[i];
-            const { tag, query } = chunk;
-            const { match } = ac.compare(query.body, tag.key);
+            const tag = chunks[i];
+            const diffs = getDiffs(query.body, tag.key);
             const itemEl = document.createElement("div");
             itemEl.style.padding = "2px 4px";
             itemEl.style.cursor = "pointer";
@@ -320,7 +320,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
             itemEl.style.borderBottom = "1px solid black";
 
             let html = `(${items.length}) `;
-            for (const [type, value] of match) {
+            for (const [type, value] of diffs) {
               if (type === -1) {
                 continue;
               }
@@ -343,7 +343,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
             });
 
             items.push({
-              chunk,
+              tag,
               element: itemEl,
             });
 
@@ -357,10 +357,193 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           render();
         }
 
+        ac.onEnd = function() {
+          console.log("onEnd", this.result);
+        }
+
         window.addEventListener("keydown", keydownHandler, true);
         mtga.element.addEventListener("click", () => hide());
         mtga.element.addEventListener("blur", () => hide());
       })();
+      /**
+       * myers algorithm
+       *
+       * -1: number of deleted characters
+       *  0: number of matched characters
+       *  1: number of inserted characters
+       *
+       * @example
+       * const result = getDiffs("Lorem", "ore"); // [[-1, "L"], [0, "ore"], [-1, "m"]]
+       */
+      function getDiffs(from, to) {
+        const backtrack = function (from, to, trace, d) {
+          const result = [];
+
+          let x = from.length;
+          let y = to.length;
+          const max = from.length + to.length;
+
+          let currentOp = null;
+          let currentStr = "";
+
+          const push = (op, char) => {
+            if (currentOp === op) {
+              currentStr = char + currentStr;
+            } else {
+              if (currentOp !== null && currentStr) {
+                result.push([currentOp, currentStr]);
+              }
+              currentOp = op;
+              currentStr = char;
+            }
+          };
+
+          for (let depth = d; depth >= 0; depth--) {
+            const v = trace[depth];
+            const k = x - y;
+
+            let prevK;
+
+            if (k === -depth || (k !== depth && v[k - 1 + max] < v[k + 1 + max])) {
+              prevK = k + 1;
+            } else {
+              prevK = k - 1;
+            }
+
+            const prevX = v[prevK + max];
+            const prevY = prevX - prevK;
+
+            // diagonal move (match)
+            while (x > prevX && y > prevY) {
+              x--;
+              y--;
+              push(0, from[x]);
+            }
+
+            if (depth === 0) break;
+
+            // vertical move (insertion)
+            if (x === prevX) {
+              y--;
+              push(1, to[y]);
+            }
+            // horizontal move (deletion)
+            else {
+              x--;
+              push(-1, from[x]);
+            }
+          }
+
+          if (currentOp !== null && currentStr) {
+            result.push([currentOp, currentStr]);
+          }
+
+          return result.reverse();
+        };
+
+        const n = from.length;
+        const m = to.length;
+        const max = n + m;
+
+        const v = Array(2 * max + 1).fill(0);
+        const trace = [];
+
+        for (let d = 0; d <= max; d++) {
+          trace.push([...v]);
+
+          for (let k = -d; k <= d; k += 2) {
+            let x;
+
+            if (k === -d || (k !== d && v[k - 1 + max] < v[k + 1 + max])) {
+              x = v[k + 1 + max];
+            } else {
+              x = v[k - 1 + max] + 1;
+            }
+
+            let y = x - k;
+
+            while (x < n && y < m && from[x] === to[y]) {
+              x++;
+              y++;
+            }
+
+            v[k + max] = x;
+
+            if (x >= n && y >= m) {
+              return backtrack(from, to, trace, d);
+            }
+          }
+        }
+
+        return [];
+      }
+      /**
+       * @example
+       * const a = "Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
+       * const b = "sit amet, adipiscing";
+       * const result = matchStrings(a, b);
+       * // {
+       * //   matchRate: 0.35714285714285715,
+       * //   similarity: 0.35714285714285715,
+       * //   diceSimilarity: 0.5263157894736842,
+       * //   jaccardSimilarity: 0.35714285714285715,
+       * //   distance: 36,
+       * //   normalizedDistance: 0.6428571428571429,
+       * //   matches: 20,
+       * //   insertions: 0,
+       * //   deletions: 36
+       * // }
+       */
+      function matchStrings(from, to) {
+        const diff = getDiffs(from, to);
+
+        let matches = 0;
+        let insertions = 0;
+        let deletions = 0;
+
+        for (const [op, str] of diff) {
+          const len = str.length;
+          if (op === 0) {
+            matches += len;
+          } else if (op === 1) {
+            insertions += len;
+          } else {
+            deletions += len;
+          }
+        }
+
+        const totalOperations = matches + insertions + deletions;
+
+        return {
+          matchRate: totalOperations > 0 ? matches / totalOperations : 1,
+
+          similarity:
+            Math.max(from.length, to.length) > 0
+              ? matches / Math.max(from.length, to.length)
+              : 1,
+
+          diceSimilarity:
+            from.length + to.length > 0
+              ? (2 * matches) / (from.length + to.length)
+              : 1,
+
+          jaccardSimilarity:
+            from.length + to.length - matches > 0
+              ? matches / (from.length + to.length - matches)
+              : 1,
+
+          distance: insertions + deletions,
+
+          normalizedDistance:
+            Math.max(from.length, to.length) > 0
+              ? (insertions + deletions) / Math.max(from.length, to.length)
+              : 0,
+
+          matches,
+          insertions,
+          deletions,
+        };
+      }
     </script>
   </body>
 </html>
