--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
       const MAX_ITEM_COUNT = 100;
       const VISIBLE_COUNT = 11;
 
-      console.log("window.MtgaJs", window.MtgaJs);
+      console.log("window.mtgaJs", window.mtgaJs);
 
       const {
         MTGA,
@@ -82,7 +82,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
         IndentModule,
         LineBreakModule,
         LineRemoveModule,
-      } = window.MtgaJs;
+      } = window.mtgaJs;
 
       const mtga = new MTGA(document.getElementById("textarea"));
 
